# ChangeLog for sys-apps/portage
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1086 2012/09/03 00:02:20 zmedico Exp $

*portage-2.2.0_alpha124 (03 Sep 2012)

  03 Sep 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha124.ebuild:
  2.2.0_alpha124 version bump. This includes all of the fixes in 2.1.11.13
  (including support for EAPI 5_pre1), and also fixes bug #433704 (add DateSet
  package set class). Bug #210077 tracks all bugs fixed since portage-2.1.x.

*portage-2.1.11.13 (02 Sep 2012)

  02 Sep 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.13.ebuild:
  2.1.11.13 version bump. This fixes bug #433694 (emaint cleanconfmem is too
  aggressive), and also adds support for experimental EAPI 5_pre1. For
  information about EAPI 5_pre1, refer to the html documentation that's
  installed when USE=doc is enabled. Bug #431026 tracks all bugs fixed since
  portage-2.1.11.9.

*portage-2.1.11.12-r2 (02 Sep 2012)
*portage-2.2.0_alpha123-r2 (02 Sep 2012)

  02 Sep 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.12-r2.ebuild,
  +portage-2.2.0_alpha123-r2.ebuild, -portage-2.1.11.12-r1.ebuild,
  -portage-2.2.0_alpha123-r1.ebuild, portage-9999.ebuild:
  Add /usr/lib/portage/pym to PYTHONPATH via /etc/env.d/05portage, for portage
  API consumers. This way we don't have to rely on patched python having the
  correct path, since it has been known to incorrectly add
  /usr/libx32/portage/pym to sys.path. Also, remove obsolete ebuild-helpers/sed
  code from portage-9999.ebuild.

*portage-2.1.11.12-r1 (01 Sep 2012)
*portage-2.2.0_alpha123-r1 (01 Sep 2012)

  01 Sep 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.12-r1.ebuild,
  +portage-2.2.0_alpha123-r1.ebuild, -portage-2.1.11.12.ebuild,
  -portage-2.2.0_alpha123.ebuild, portage-2.1.11.9.ebuild,
  portage-2.1.6.7_p1.ebuild, portage-2.2.0_alpha120.ebuild: