@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1086 2012/09/03 00:02:20 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1087 2012/09/06 17:43:51 zmedico Exp $
+
+  06 Sep 2012; Zac Medico <zmedico@gentoo.org> -portage-2.1.11.12-r2.ebuild,
+  -portage-2.2.0_alpha123-r2.ebuild:
+  Remove old versions.
 
 *portage-2.2.0_alpha124 (03 Sep 2012)
 
